# cloud-image-retriever

./: .gitignore  README.md  azure.json  get-aws-images.sh  get-images.sh  main.tf  pyproject.toml
.github/: get-aws-images.sh  join-aws-regions.py
.github/workflows/: aws.yml  azure.yml  gcp.yml  get_aws_images.yml  get_azure_images.yml  get_google_images.yml  parse.yml  retrieve.yml  test.yml  update-image-data.yml
retriever/: README.md  filter_aws.py  pyproject.toml
retriever/retriever/: cli.py  filter_aws.py
terraform/aws/: main.tf
terraform/gcp/: main.tf
