[tool.poetry]
name = "retriever"
version = "0.1.0"
description = ""
authors = ["Major Hayden <major@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.2"
click = "^8.1.3"
zstandard = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.0.1.230501"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
filter-aws = "retriever.cli:filter_aws_data"